--- a/index.Rmd
+++ b/index.Rmd
@@ -89,7 +89,11 @@ I'm a 5th year PhD Candidate in Operations Management at Harvard University. I a
 
 My research investigates the connections between managerial ability, labor scheduling decisions, automation, and firm performance. For more details on my papers, please visit the [Research Section](https://calebkwon.com/research.html) of my website. 
 
-As part of my research, I also work as a data consultant for a major technology company that creates and offers algorithmic solutions to firms across various industries. I collaborate with this company to empirically study how managers interact with AI tools that forecast demand and schedule labor using data from tens of thousands of retail stores across the world. 
+As part of my research, I also work as a consultant for a tech company that develops and offers commercial AI tools to firms across various industries. I work for, and collaborate with this company, to empirically study the use of AI tools that automate a variety of business operations (e.g., demand forecasting, labor scheduling, inventory management). Some questions include:
+
+  1. What are the effects of such AI tools on store performance? 
+  2. How do managers interact with AI tools? What are some of the challenges in this interaction?
+  3. What guidance and training can we provide managers to better utilize such tools?
 
 During my PhD, I have participated in multiple teaching roles. At Harvard, I have been a teaching fellow in the full-time MBA program at HBS and acted as an executive coach in the [Program For Leadership Development Executive Education program](https://www.exed.hbs.edu/leadership-development/). I have also served as a teaching fellow in the Executive Education Program at the Booth School of Business (London and Hong Kong) at the University of Chicago. Additionally, I am an MBA course instructor at Boston College Carroll School of Management, where I teach data science and coding for business.
 
