--- a/index.Rmd
+++ b/index.Rmd
@@ -83,18 +83,15 @@ output:
 
 # Caleb Kwon 
 
-I'm a 5th year PhD Candidate in Operations Management at Harvard University. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). 
+I'm an incoming Assistant Professor in the [Information, Risk, and Operations Management Department](https://www.mccombs.utexas.edu/faculty-and-research/departments/irom/) at the University of Texas, McCombs School of Business. Currently, I am a PhD student at Harvard Business School, and I expect to graduate in May, 2024. 
 
-My research investigates the connections between managerial ability, labor scheduling decisions, automation, and firm performance. For more details on my papers, please visit the [Research Section](https://calebkwon.com/research.html) of my website. 
+My research interests are in empirical Operations Management. Some of my recent research has examined the effects of Fair Workweek Laws and the effects of automation in retail. For more details on my papers, please visit the [Research Section](https://calebkwon.com/research.html) of my website. 
 
-During my PhD, I have participated in multiple teaching roles. At Harvard, I have been a teaching fellow in the full-time MBA program at HBS and acted as an executive coach in the [Program For Leadership Development Executive Education program](https://www.exed.hbs.edu/leadership-development/). I have also served as a teaching fellow in the Executive Education Program at the Booth School of Business (London and Hong Kong) at the University of Chicago. Additionally, I am an MBA course instructor at Boston College Carroll School of Management, where I teach data science and coding for business.
 
-Prior to Harvard, I received a B.A. in Economics from Simon Fraser University, and an M.A in Economics from Northwestern University. 
 
 
 # About Me:
 
-  - [Harvard Business School Profile](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260) 
   - [Curriculum Vitae/Resume](https://calebkwon.com/CV.html)
   - [Google Scholar Profile](https://scholar.google.com/citations?user=mBw3GmIAAAAJ)
 
