--- a/research.Rmd
+++ b/research.Rmd
@@ -56,7 +56,7 @@ output:
 ---
 
 
-## 5. [Human-Computer Interactions in Demand Forecasting and Labor Scheduling Decisions]() (2022) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486)
+## 5. [Human-Computer Interactions in Demand Forecasting and Labor Scheduling Decisions](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4773773) (2022) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486)
 
 ### *R&R* at **Management Science**
 #### First Draft: May 21, 2022. 
